--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,9 @@ rvm:
 script:
   - "bundle exec rake lint"
   - "bundle exec rake spec SPEC_OPTS='--format documentation'"
-env:
-  - PUPPET_VERSION="~> 3.0.0"
-  - PUPPET_VERSION="~> 3.1.0"
-  - PUPPET_VERSION="~> 3.2.0"
-  - PUPPET_VERSION="~> 3.3.0"
+  - "bundle exec rspec/acceptance"
 matrix:
-  allow_failures:
-    - rvm: ruby-head
-  exclude:
-    - rvm: 1.9.3
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
-    - rvm: ruby-head
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
+  include:
+    - rvm 1.9.3
+    - PUPPET_GEM_VERSION="~> 3.0" BEAKER_set="default"
 gemfile: .gemfile
-notifications:
-  email:
-    - travisci@tylerwalts.com
