--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,17 @@ bundler_args: "--jobs=3 --retry=3 --without=development"
 before_script: bundle exec puppet --version
 script: bundle exec rake test
 env:
-- PUPPET_VERSION='~> 3.8.0'
-- PUPPET_VERSION='~> 4.5.0'
+- PUPPET_VERSION='~> 3.8.7'
+- PUPPET_VERSION='~> 4.7.0'
 matrix:
   include:
   - rvm: default
     sudo: required
     services: docker
     env: BEAKER_set=centos67 BEAKER_debug=true
-    script: bundle exec rake beaker
+    script: bundle exec rake spec_prep beaker
   - rvm: default
     sudo: required
     services: docker
     env: BEAKER_set=debian8 BEAKER_debug=true
-    script: bundle exec rake beaker
+    script: bundle exec rake spec_prep beaker
