--- a/spec/acceptance/nodesets/debian8.yml
+++ b/spec/acceptance/nodesets/debian8.yml
@@ -7,9 +7,10 @@ HOSTS:
       docker_preserve_image: true
       roles:
         - agent
+        - default
       docker_image_commands:
         - 'apt-get update && apt-get -y install puppet'
-      proxyurl: ~
+      #proxyurl: ~
 CONFIG:
   type: foss
   log_level: info
