--- a/spec/acceptance/nodesets/default.yml
+++ b/spec/acceptance/nodesets/default.yml
@@ -23,7 +23,7 @@ HOSTS:
         - agent
       docker_image_commands:
         - 'apt-get update && apt-get -y install puppet'
-      proxyurl: ~
+      #proxyurl: ~
 CONFIG:
   type: foss
   log_level: info
