fixed Debian8 docker Image

--- a/spec/acceptance/nodesets/debian8.yml
+++ b/spec/acceptance/nodesets/debian8.yml
@@ -2,7 +2,7 @@
 HOSTS:
   debian8:
     platform: debian-8-amd64
-    image: debian:pmu
+    image: debian:8
     hypervisor: docker
     docker_preserve_image: true
     roles:
