--- a/spec/acceptance/nodesets/centos67.yml
+++ b/spec/acceptance/nodesets/centos67.yml
@@ -13,6 +13,7 @@ HOSTS:
       - 'wget http://yum.puppetlabs.com/puppetlabs-release-pc1-el-6.noarch.rpm'
       - 'rpm -Uvh puppetlabs-release-pc1-el-6.noarch.rpm'
       - 'yum -y install puppet-agent'
+    proxyurl: False
 CONFIG:
   type: foss
   log_level: info
